Revision history for {{$dist->name}}

{{$NEXT}}

0.07 Tue Mar 10 2015

  - Allow mocked pacakges to capture calls to new.
  - Added "resetAll" method.
  - Update destrcutor to prevent internmitent failures in globabl destruction on objects created from mocked pacakge
    

0.06.1 Fri Mar 06 2015

  - Updated package mocking stucture to allow mocks to pass moose type constraints when used in moose objects.

0.06 Thu Mar 05 2015

  - Added support for immutable packages, and test for same.

0.05 Thu Mar 05 2015

  - Refine returns to allow methods to return arrays
  - Update pod so that version increments correctly
  - Added documentation about package mocking

0.04 Wed Mar 04 2015

   - Refined "resetCalls" to allow only history of specific methods to be clear.
   - Added tests for "resetCalls"
   - Added method "resetMocks" to reset the state of specified mock conditions, with tests for same.

0.03 Wed Mar 04 2015

  - Added method "resetCalls" to allow clearing the call records. Useful if you use the same mock wrapper in multiple tests rather than creating a new on for each.

0.02 Wed Mar 04 2015

  - Revampd package mocking algorithm to use metaclass. much more eligant than hacking on the symbol table directly.

0.001 Thu Feb 26 2015