@@ -6,7 +6,7 @@ Test::Mock::Wrapper
 
 =head1 VERSION
 
-version 0.07
+version 0.08
 
 =head1 SYNOPSIS
 
